# anma

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.yaml  DECISIONS.md  GRAPH.yaml  MANIFEST.yaml  README.md  RELEASE.md  SECURITY.md  anma.yaml  pyproject.toml  tach.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: anma-action-demo.yml  anma.yml  ci.yml  release.yml
anma/: CLAUDE.md  __init__.py  adapters.py  anma.yaml  cli.py  compile.py  contracts.py  engine.py  hook.py  lang_dart.py  lang_go.py  lang_ts.py  scaffold.py  templates.py
benchmark_projects/: archetype_index.yaml
benchmark_projects/api-gateway/: MANIFEST.yaml
benchmark_projects/api-gateway/modules/auth-gateway/: ASSUMPTIONS.yaml  CONTRACT.yaml  MEMORY.yaml  STATE.yaml
benchmark_projects/api-gateway/modules/gateway-analytics/: CONTRACT.yaml  (+3 more)
benchmark_projects/cli-sitegen/: MANIFEST.yaml
benchmark_projects/community-forum/: MANIFEST.yaml
benchmark_projects/data-pipeline-etl/: MANIFEST.yaml
benchmark_projects/ecommerce-platform/: MANIFEST.yaml
benchmark_projects/expense-tracker/: MANIFEST.yaml
benchmark_projects/fitness-app/: MANIFEST.yaml
benchmark_projects/headless-cms/: MANIFEST.yaml
benchmark_projects/ml-pipeline/: MANIFEST.yaml
benchmark_projects/multiplayer-quiz/: MANIFEST.yaml
benchmark_projects/saas-taskmanager/: MANIFEST.yaml
benchmark_projects/smart-home-iot/: MANIFEST.yaml
benchmark_results/: phase1_measurements.json  phase2_degradation.json
benchmarks/: PREREGISTRATION-go-ts-v2.md  README.md  RESULTS-go-ts-v2.md
benchmarks/bench/: report.py  run.py  runner.py  scorer.py
benchmarks/results/: results.json  results.md
benchmarks/scenarios/cross-session-persistence/: boundaries.yaml  task.md
benchmarks/scenarios/go-payments/: task.md
benchmarks/scenarios/go-payments-v2/: boundaries.yaml
benchmarks/scenarios/orders-inventory/: boundaries.yaml  task.md
benchmarks/scenarios/payments-boundary/: boundaries.yaml  task.md
benchmarks/scenarios/ts-payments/: task.md
benchmarks/scenarios/ts-payments-v2/: boundaries.yaml  task.md
benchmarks/tests/: test_harness.py
checks/: check_conventions_pin.py  check_principles.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONCEPTS.md  CONTRACT-GUIDE.md  MULTI-AGENT.md  QUICKSTART.md  WORKFLOWS.md
domains/core/: GATEWAY.yaml
domains/core/notifications/: CONTRACT.yaml
domains/core/todo-api/: CONTRACT.yaml
domains/core/user-auth/: CONTRACT.yaml
modules/database-core/: ASSUMPTIONS.yaml  CHANGELOG.yaml  CONTRACT.yaml  MEMORY.yaml  STATE.yaml  TESTS.yaml
tests/: test_core.py  test_dart.py  test_go.py  test_ts.py
tools/: anma.py  bus_archive.py  claims.py  compat_matrix.py  contract_diff.py  dashboard.py  discover.py  gen_claude_md.py  gen_contract.py  gen_graph.py  gen_product_spec.py  gen_tests.py  graph_viz.py  impact.py  import_contracts.py  init_project.py  lint_contracts.py  new_manager.py  new_module.py  plan_migration.py  remove_module.py  rename_project.py  session_log.py  smoke_test.py  sync_all.py  test_bug_regressions.py  test_linter.py  tokenizer.py  verify_contract.py  yaml_editor.py  yaml_utils.py
tools/benchmark/: bench_scaling.py  compare_quality.py  eval_degradation.py  generate_archetypes.py  measure_tokens.py
(+361 files in other folders)
