[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anma"
version = "0.6.0"
description = "Boundary enforcement for AI coding agents: plain-YAML module contracts compiled into CLAUDE.md, hooks, and CI checks that keep agents inside your architecture."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["claude-code", "ai-agents", "architecture", "module-boundaries", "llm"]
authors = [{ name = "Kellum Ho", email = "kellum@anmalabs.dev" }]
dependencies = ["pyyaml>=6.0,<7"]

[project.optional-dependencies]
# tach is the preferred enforcement engine (Rust, interface-level checks).
# Optional: ANMA ships a zero-dep builtin fallback if this is absent.
tach = ["tach>=0.30"]
# Go's external backend (go-arch-lint) is a Go binary, not a PyPI package:
#   go install github.com/fe3dback/go-arch-lint@latest
# This extra exists as a documented install target; the builtin import scanner
# needs nothing. `pip install anma[go]` therefore adds no Python dependency.
go = []
dev = ["pytest>=8.0", "pip-audit>=2.7"]

[project.urls]
Homepage = "https://anmalabs.dev"
Repository = "https://github.com/anma-labs/anma"

[project.scripts]
anma = "anma.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["anma"]
exclude = ["anma/CLAUDE.md", "anma/anma.yaml"]  # dogfood artifacts, not package data
